Подготовил адаптивную графику

--- a/source/less/blocks/title-content.less
+++ b/source/less/blocks/title-content.less
@@ -15,7 +15,24 @@
     background-image: url(../../img/text-sedona.svg);
     background-repeat: no-repeat;
     background-size: contain;
-}
+  }
+  &::after{
+    position: absolute;
+    bottom: 0;
+    left: -1px;
+    right: -1px;
+    content: "";
+    height: 27px;
+    background-image: url(../../img/bg-intro-triangle-mobile.svg);
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+    background-size: cover;
+  }
+
+  @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx){
+    background-image: url(../../img/bg-back-mobile@2x.jpg);
+    background-size: 1536px auto;
+  }
 }
 
 .title-content--size{
@@ -25,34 +42,30 @@
     width: 281px;
     height: 214px;
     background-image: url(../../img/text-sedona-index.svg);
+  }
 }
-}
-
-.title-content::after{
-  position: absolute;
-  bottom: 0;
-  left: -1px;
-  right: -1px;
-  content: "";
-  height: 27px;
-  background-image: url(../../img/bg-intro-triangle-mobile.svg);
-  background-repeat: no-repeat;
-  background-position: 50% 50%;
-  background-size: cover;
-}
-
 
 @media (min-width: @tablet-width){
   .title-content{
     height: 290px;
     margin-left: -59px;
     margin-right: -59px;
+    background-image: url(../../img/bg-back-tablet@1x.jpg);
     &::before{
       top: 95px;
       width: 462px;
       height: 78px;
       transform: translateX(-50%);
       background-size: auto;
+    }
+    &::after{
+      height: 57px;
+      background-image: url(../../img/bg-intro-triangle-tablet.svg);
+    }
+
+    @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx){
+      background-image: url("../../img/bg-back-tablet@2x.jpg");
+      background-size: 1536px auto;
     }
   }
 
@@ -67,11 +80,6 @@
       height: 350px;
     }
   }
-
-
-  .title-content::after{
-    display: none;
-  }
 }
 
 @media (min-width: @desctop-width){
@@ -79,9 +87,18 @@
     height: 301px;
     margin-left: 0;
     margin-right: 0;
+    background-image: url(../../img/bg-back-desktop@1x.jpg);
     background-size: cover;
     &::before{
       top: 102px;
+    }
+    &::after{
+      background-image: url(../../img/bg-intro-triangle-desktop.svg);
+    }
+
+    @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx){
+      background-image: url(../../img/bg-back-desktop@2x.jpg);
+      background-size: 2400px auto;
     }
   }
 
