--- a/source/less/blocks/request.less
+++ b/source/less/blocks/request.less
@@ -3,6 +3,7 @@
   padding-bottom: 25px;
   padding-left: 20px;
   padding-right: 20px;
+  border-bottom: 1px solid #dbdbdb;
 }
 
 .request__title{
@@ -45,6 +46,7 @@
     padding-bottom: 0;
     padding-left: 56px;
     padding-right: 0;
+    border: 0;
     box-sizing: border-box;
   }
 
