--- a/source/less/blocks/characterization.less
+++ b/source/less/blocks/characterization.less
@@ -3,6 +3,7 @@
   padding-bottom: 25px;
   padding-left: 20px;
   padding-right: 20px;
+  border-bottom: 1px solid #dbdbdb;
 }
 
 .characterization__title{
@@ -57,6 +58,7 @@
     padding-bottom: 0;
     padding-left: 0;
     padding-right: 50px;
+    border: 0;
     box-sizing: border-box;
   }
 
