--- a/source/less/blocks/check-list.less
+++ b/source/less/blocks/check-list.less
@@ -3,6 +3,7 @@
   padding-bottom: 25px;
   padding-left: 20px;
   padding-right: 20px;
+  border-bottom: 1px solid #dbdbdb;
 }
 
 .check-list__title{
@@ -15,9 +16,14 @@
 }
 
 .check-list__label{
+  position: relative;
   display: flex;
   flex-direction: row;
   align-items: center;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  padding-left: 71px;
+  padding-right: 0;
   font-size: 18px;
   line-height: 26px;
   font-weight: 700;
@@ -30,10 +36,10 @@
 
 .check-list__label::before{
   content: "";
-  display: inline-block;
+  position: absolute;
+  left: 0;
   width: 56px;
   height: 56px;
-  margin-right: 21px;
   background-color: #f2f2f2;
   cursor: pointer;
 }
@@ -42,12 +48,17 @@
   display: none;
 }
 
-.check-list__input:checked + .check-list__label::before{
-  width: 20px;
-  height: 10px;
-  border-bottom: 2px solid #000000;
-  border-left: 2px solid #000000;
+.check-list__input:checked + .check-list__label::after{
+  content: "";
+  position: absolute;
+  top: 16px;
+  left: 16px;
+  width: 24px;
+  height: 17px;
+  border-bottom: 6px solid #333333;
+  border-left: 6px solid #333333;
   transform: rotate(-45deg);
+  box-sizing: border-box;
 }
 
 @media (min-width: @tablet-width){
@@ -58,6 +69,7 @@
     padding-top: 27px;
     padding-left: 0;
     padding-right: 0;
+    border: 0;
     box-sizing: border-box;
   }
 
@@ -92,15 +104,17 @@
   .check-list__wrapper{
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
-    padding-left: 95px;
-    padding-right: 90px;
+    justify-content: center;
   }
 
   .check-list__label{
-    width: 205px;
+    width: 210px;
+    margin-top: 0;
     margin-bottom: 24px;
+    margin-left: 20px;
+    margin-right: 20px;
     text-transform: none;
+    box-sizing: border-box;
   }
 }
 
