--- a/source/less/blocks/review.less
+++ b/source/less/blocks/review.less
@@ -4,6 +4,7 @@
   padding-left: 23px;
   padding-right: 20px;
   text-align: center;
+  border-bottom: 1px solid #dbdbdb;
 }
 
 .review__title{
@@ -26,6 +27,7 @@
     padding-top: 75px;
     padding-left: 112px;
     padding-right: 112px;
+    border: 0;
   }
 
   .review__title{
