--- a/source/less/blocks/post.less
+++ b/source/less/blocks/post.less
@@ -82,12 +82,14 @@
 
   .post__image-city{
     position: absolute;
-    width: 100%
+    width: 100%;
+    height: auto;
   }
 
   .post__image-bridge{
     position: absolute;
     width: 100%;
+    height: auto;
   }
 }
 
