--- a/source/less/blocks/note.less
+++ b/source/less/blocks/note.less
@@ -71,9 +71,17 @@
   font-size: 0;
   background-color: transparent;
   border: 0;
-  
+
   svg{
     fill: #5c6870;
+    
+    &:hover{
+      fill: #333333;
+    }
+    
+    &:active{
+      fill: #c1c1c1;
+    }
   }
 }
 
@@ -146,11 +154,11 @@
     top: -60%;
     left: 40%;
   }
-  
+
   .note__controls{
     
     svg{
-      fill: @main-color;
+      fill: #ffffff; 
     }
   }
 
