--- a/source/less/blocks/photo.less
+++ b/source/less/blocks/photo.less
@@ -37,7 +37,7 @@
 
 .photo__likes{
   display: flex;
-  
+
   svg{
     fill: #b2b2b2;
   }
@@ -99,6 +99,13 @@
   .photo__likes{
     margin-top: -5px;
   }
+
+  .photo__likes{
+    
+    svg{
+      fill: @main-color;
+    }
+  }
 }
 
 @media (min-width: @desctop-width){
@@ -126,9 +133,9 @@
     color: @main-color;
     background-color: rgba(0, 0, 0, 0.4);
   }
-  
+
   .photo__likes{
-    
+
     svg{
       fill: @main-color;
     }
