--- a/source/less/blocks/request.less
+++ b/source/less/blocks/request.less
@@ -20,8 +20,10 @@
   display: flex;
 }
 
-.request__label:not(:last-child){
-  margin-bottom: 21px;
+.request__label{
+  &:not(:last-child){
+    margin-bottom: 21px; 
+  }
 }
 
 .request__name{
