--- a/source/less/blocks/check-list.less
+++ b/source/less/blocks/check-list.less
@@ -30,35 +30,69 @@
   text-transform: none;
 }
 
-.check-list__label:not(:last-child){
-  margin-bottom: 24px;
+.check-list__label{
+  &:not(:last-child){
+    margin-bottom: 24px; 
+  }
 }
 
-.check-list__label::before{
-  content: "";
-  position: absolute;
-  left: 0;
-  width: 56px;
-  height: 56px;
-  background-color: #f2f2f2;
-  cursor: pointer;
+.check-list__label{
+  &::before{
+    content: "";
+    position: absolute;
+    left: 0;
+    width: 56px;
+    height: 56px;
+    background-color: #f2f2f2;
+  }
+  
+  &:hover{
+    &::before{
+      background-color: #e5e5e5;
+    }
+  }
+  
+  &:active{
+    &::before{
+      background-color: #d5d5d5;
+    }
+  }
 }
 
 .check-list__input{
   display: none;
 }
 
-.check-list__input:checked + .check-list__label::after{
-  content: "";
-  position: absolute;
-  top: 16px;
-  left: 16px;
-  width: 24px;
-  height: 17px;
-  border-bottom: 6px solid #333333;
-  border-left: 6px solid #333333;
-  transform: rotate(-45deg);
-  box-sizing: border-box;
+.check-list__input{
+  &:checked{
+    &+.check-list__label{
+      &::after{
+        content: "";
+        position: absolute;
+        top: 16px;
+        left: 16px;
+        width: 24px;
+        height: 17px;
+        border-bottom: 6px solid #333333;
+        border-left: 6px solid #333333;
+        transform: rotate(-45deg);
+        box-sizing: border-box;
+      }
+    }
+  }
+}
+
+.check-list__input {
+  &:checked {
+    &+.check-list__label {
+      &:active {
+        &::after {
+          border-bottom: 6px solid #a4a4a4;
+          border-left: 6px solid #a4a4a4;
+        }
+      }
+    }
+  }
 }
 
 @media (min-width: @tablet-width){
@@ -73,23 +107,25 @@
     box-sizing: border-box;
   }
 
-  .check-list::before{
-    position: absolute;
-    top: 17%;
-    content: "";
-    width: 125px;
-    height: 1px;
-    background-color: #dbdbdb;
-  }
-
-  .check-list::after{
-    position: absolute;
-    top: 17%;
-    right: 0;
-    content: "";
-    width: 125px;
-    height: 1px;
-    background-color: #dbdbdb;
+  .check-list{
+    &::before{
+      position: absolute;
+      top: 17%;
+      content: "";
+      width: 125px;
+      height: 1px;
+      background-color: #dbdbdb; 
+    }
+    
+    &::after{
+      position: absolute;
+      top: 17%;
+      right: 0;
+      content: "";
+      width: 125px;
+      height: 1px;
+      background-color: #dbdbdb; 
+    } 
   }
 
   .check-list__title{
@@ -123,15 +159,19 @@
     padding-top: 29px;
   }
 
-  .check-list::before{
-    top: 24%;
-    width: 280px;
+  .check-list{
+    &::before{
+      top: 24%;
+      width: 280px; 
+    }
   }
 
-  .check-list::after{
-    top: 24%;
-    right: 0;
-    width: 280px;
+  .check-list{
+    &::after{
+      top: 24%;
+      right: 0;
+      width: 280px; 
+    }
   }
 
   .check-list__wrapper{
