--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -4,6 +4,74 @@
   background-color: @second-color;
 }
 
+.main-nav__toggle{
+  position: absolute;
+  top: 15px;
+  right: 20px;
+  width: 35px;
+  height: 25px;
+  background-color: transparent;
+  border: 0;
+  font-size: 0;
+}
+
+.main-nav__list{
+  margin: 0;
+  padding: 0;
+}
+
+.main-nav__item{
+  padding-top: 8px;
+  padding-bottom: 8px;
+  text-align: center;
+  background-color: @second-color;
+  list-style: none;
+}
+
+.main-nav__item{
+  &:not(:first-child){
+    border-top: 1px solid #9ac2db;
+  }
+}
+
+.main-nav__item{
+  &:not(:last-child){
+    border-bottom: 1px solid #678fa8;
+  }
+}
+
+.main-nav__item{
+  &:last-child{
+    box-shadow: inset 0 -1px 5px #6d97b1;  
+  }
+}
+
+.main-nav__link{
+  display: block;
+  width: 100%;
+  font-size: 18px;
+  line-height: 40px;
+  font-weight: 700;
+  color: @main-color;
+  text-transform: uppercase;
+  text-decoration: none;
+  z-index: 1000;
+}
+
+@media (max-width: @mobile-width-only){
+  .main-nav--closed{
+  &::before{
+    content: "";
+    position: absolute;
+    top: 15px;
+    right: 20px;
+    width: 36px;
+    height: 3px;
+    background-color: @second-color;
+    box-shadow: 0 8px 0 0 @second-color, 0 16px 0 0 @second-color;
+  }
+}
+
 .main-nav--opened{
   &::before,
   &::after{
@@ -27,50 +95,23 @@
   }
 }
 
-
-.main-nav__toggle{
-  position: absolute;
-  top: 15px;
-  right: 20px;
-  width: 25px;
-  height: 25px;
-  background-color: transparent;
-  border: 0;
-  font-size: 0;
-}
-
-.main-nav__list{
-  margin: 0;
-  padding: 0;
-}
-
-.main-nav__item{
-  padding-top: 8px;
-  padding-bottom: 8px;
-  text-align: center;
-  background-color: @second-color;
-  list-style: none;
-}
-
-.main-nav__item:not(:first-child){
-  border-top: 1px solid #9ac2db;
-}
-
-.main-nav__item:not(:last-child){
-  border-bottom: 1px solid #678fa8;
-}
-
-.main-nav__item:last-child{
-  box-shadow: inset 0 -1px 5px #6d97b1;
-}
-
-.main-nav__link{
-  font-size: 18px;
-  line-height: 40px;
-  font-weight: 700;
-  color: @main-color;
-  text-transform: uppercase;
-  text-decoration: none;
+  .main-nav--closed .main-nav__list{
+    display: none;
+  }
+  
+  .main-nav__item{
+    &:hover{
+      background-color: #669ec0;
+    }
+    
+    &:active{
+      background-color: #5496bd;
+      
+      .main-nav__link{
+        color: #669ec0;
+      }
+    }
+  }
 }
 
 @media (min-width: @tablet-width){
@@ -102,25 +143,53 @@
     background-color: @main-color;
   }
 
-  .main-nav__item:not(:first-child){
-  border-top: 0;
+  .main-nav__item{
+    &:not(:first-child){
+      border-top: 0; 
+    }
   }
 
-.main-nav__item:not(:last-child){
-  border-bottom: 0;
+  .main-nav__item{
+    &:not(:last-child){
+      border-bottom: 0;
+    }
   }
 
-.main-nav__item:last-child{
-  box-shadow: 0 0 0 0;
+  .main-nav__item{
+    &:last-child{
+      box-shadow: 0 0 0 0; 
+    }
   }
 
-  .main-nav__item:nth-child(2){
-    margin-right: auto;
+  .main-nav__item{
+    &:nth-child(2){
+      margin-right: auto; 
+    }
   }
 
   .main-nav__link{
     font-size: 14px;
     color: @title-color;
+    
+    &:hover{
+      color: #a3c7de;
+    }
+    
+    &:active{
+      color: #b2b2b2;
+    }
+  }
+  
+  .main-nav__link--active{
+    color: #766357;
+    
+    &:hover{
+      color: #604e43;
+    }
+    
+    &:active{
+      color: #d6d0cc;
+    }
   }
 }
 
