--- a/source/less/blocks/realizer.less
+++ b/source/less/blocks/realizer.less
@@ -10,11 +10,20 @@
   width: 32px;
   font-size: 0;
   line-height: 0;
-  
+
   svg{
     width: 40px;
+    height: 33px;
     display: block;
     fill: @title-color;
+      
+    &:hover{
+      fill: #81b3d2;  
+    }
+    
+    &:active{
+      fill: #c1c1c1;
+    }
   }
 }
 
