--- a/source/less/blocks/attributes.less
+++ b/source/less/blocks/attributes.less
@@ -23,19 +23,19 @@
 
 .attributes__item--house{
   &::before{
-    background-image: url(../../img/icon-house.svg); 
+    background-image: url(../img/icon-house.svg); 
   }
 }
 
 .attributes__item--gift{
   &::before{
-    background-image: url(../../img/icon-gift.svg);
+    background-image: url(../img/icon-gift.svg);
   }
 }
 
 .attributes__item--food{
   &::before{
-    background-image: url(../../img/icon-burger.svg); 
+    background-image: url(../img/icon-burger.svg); 
   }
 }
 
@@ -108,15 +108,15 @@
   }
 
   .attributes__img--house{
-    background-image: url(../../img/icon-house.svg);
+    background-image: url(../img/icon-house.svg);
   }
 
   .attributes__img--gift{
-    background-image: url(../../img/icon-gift.svg);
+    background-image: url(../img/icon-gift.svg);
   }
 
   .attributes__img--food{
-    background-image: url(../../img/icon-burger.svg);
+    background-image: url(../img/icon-burger.svg);
   }
 
   .attributes__title{
