--- a/source/less/blocks/comment.less
+++ b/source/less/blocks/comment.less
@@ -37,6 +37,12 @@
   &:hover{
     background-color: #e5e5e5;
   }
+  
+  &:focus{
+    box-shadow: inset 0 0 0 4px #e5e5e5;
+    background-color: @main-color;
+    outline: none;
+  }
 }
 
 .comment__text{
