--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -13,6 +13,7 @@
   background-color: transparent;
   border: 0;
   font-size: 0;
+  outline: none;
 }
 
 .main-nav__list{
@@ -47,8 +48,6 @@
 }
 
 .main-nav__link{
-  display: block;
-  width: 100%;
   font-size: 18px;
   line-height: 40px;
   font-weight: 700;
@@ -111,6 +110,10 @@
         color: #669ec0;
       }
     }
+  }
+  
+  .main-nav__link{
+    display: block;
   }
 }
 
