--- a/source/less/blocks/success-popup.less
+++ b/source/less/blocks/success-popup.less
@@ -1,8 +1,16 @@
 .success-popup{
+  position: absolute;
+  bottom: -200%;
   display: none;
   width: 320px;
   margin: 0 auto;
-  box-shadow:  0 0 40px 0 #e4e4e4;
+  background-color: @main-color;
+  box-shadow:  0 5px 40px 0 #e4e4e4;
+  z-index: 100;
+}
+
+.popup--show{
+  display: block;
 }
 
 .success-popup__wrapper{
@@ -39,12 +47,15 @@
   background-color: #f2f2f2;
 }
 
-.popup--show{
-  display: block;
+.success-popup__btn{
+  width: 280px;
+  margin: 0 auto;
 }
 
 @media (min-width: @tablet-width){
   .success-popup{
+    bottom: -180%;
+    left: 11%;
     width: 640px;
   }
 
@@ -73,5 +84,12 @@
     width: 458px;
     margin-left: auto;
     margin-right: auto;
+  }
+}
+
+@media (min-width: @desctop-width){
+  .success-popup{
+    bottom: -160%;
+    left: 26%;
   }
 }
