--- a/source/less/blocks/total-wrapper.less
+++ b/source/less/blocks/total-wrapper.less
@@ -17,5 +17,7 @@
     width: 1200px;
     margin-left: auto;
     margin-right: auto;
+    background-color: @main-color;
+    box-shadow: 0 5px 15px 0 #cccccc;
   }
 }
