--- a/source/less/global/scaffolding.less
+++ b/source/less/global/scaffolding.less
@@ -25,6 +25,10 @@ body{
   font-weight: 400;
   background-color: @main-color;
   text-transform: uppercase;
+  
+  @media (min-width: @desctop-width){
+    background-color: #f1f1f1;
+  }
 }
 
 .btn-item{
@@ -95,5 +99,11 @@ img{
   
   &:hover{
     background-color: #e5e5e5;
+  }
+  
+  &:focus{
+    box-shadow: inset 0 0 0 4px #e5e5e5;
+    background-color: @main-color;
+    outline: none;
   }
 }
